upgrade to angular 17

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
     <h1>
-        Welcome to the demo of <code>@politie/ngx-sherlock</code>
+        Welcome to the demo of <code>&#64;politie/ngx-sherlock</code>
     </h1>
 </div>
 <app-auto-change-detection-service></app-auto-change-detection-service>
